...
        self.itemPriceLabel.text = "\(model.price ?? 0) руб."
        guard let url = URL(string: model.picUrl ?? "") else { return }
        self.itemPic.downloaded(from: url)
    }
    
    private func showAddToCartSuccessAlert() {
        let alert = UIAlertController(title: "Корзина", message: "Товар успешно добавлен в корзину.", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
        self.present(alert, animated: true, completion: nil)
    }
}

